<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/my_fragment_color"
    android:orientation="vertical"
    tools:context=".SimpleFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/fragment_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/question_article"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <RadioGroup
        android:id="@+id/radio_group_peliculas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_button_peli1"
            android:layout_width="129dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:text="@string/peli_1" />

        <RadioButton
            android:id="@+id/radio_button_peli2"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:text="@string/peli_2" />

        <RadioButton
            android:id="@+id/radio_button_peli3"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:text="@string/peli_3" />

    </RadioGroup>
</LinearLayout>